<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navSearch"
                    android:icon="@drawable/ic_search"
                    android:title="@string/search_books" />
            </group>
        </menu>
    </item>

    <item android:title="@string/communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navRate"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share" />

                <item
                    android:id="@+id/navReport"
                    android:icon="@drawable/ic_bug"
                    android:title="@string/report_a_bug" />
            </group>
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navLogout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>