<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/libraryImage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:visibility="visible"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_camera"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/sh_rounded_corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        tools:visibility="visible">

        <View
            android:layout_width="100dp"
            android:layout_height="5dp"
            android:layout_marginTop="15dp"
            android:background="#D8D8D8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLibraryName"
            style="@style/DialogText"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/library_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tvLibraryRating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvLibraryRating" />

        <TextView
            android:id="@+id/tvLibraryRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-60dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/tvLibraryName" />

        <ImageButton
            android:id="@+id/btnLibraryFavourite"
            style="@style/ImageButton"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_circle_filled"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@id/tvLibraryRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvLibraryName" />

        <ImageButton
            android:id="@+id/btnRemoveBook"
            style="@style/ImageButton"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="60dp"
            android:background="@drawable/ic_circle_filled"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_remove"
            app:layout_constraintBottom_toBottomOf="@id/tvLibraryRating"
            app:layout_constraintEnd_toEndOf="@+id/btnLibraryFavourite"
            app:layout_constraintTop_toTopOf="@id/tvLibraryName" />

        <ImageButton
            android:id="@+id/btnAddBook"
            style="@style/ImageButton"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginEnd="60dp"
            android:background="@drawable/ic_circle_filled"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@id/tvLibraryRating"
            app:layout_constraintEnd_toEndOf="@+id/btnRemoveBook"
            app:layout_constraintTop_toTopOf="@id/tvLibraryName" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/library_dialog_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvLibraryName"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navigationHelper"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription">

            <ImageButton
                android:id="@+id/imageView"
                style="@style/ImageButton"
                android:layout_marginEnd="60dp"
                android:background="@drawable/ic_circle_filled"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/libLocText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small_dummy_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cardView"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

            <fragment
                android:id="@+id/mapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".main.library.details.LibraryDetailsFragment"
                tools:ignore="FragmentTagUsage" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvBooksTitle"
            style="@style/DialogText"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/books_available"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigationHelper" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBooks"
            android:layout_width="match_parent"
            android:layout_height="345dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBooksTitle"
            tools:listitem="@layout/list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>